Extended range of supporte SQL functions.